crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_whatsapp__adaptivecard_edge_cases.snap
---
source: crates/provider-tests/tests/provider_harness.rs
expression: value
---
{
  "event": {
    "channel": "whatsapp",
    "id": "<FIXED>",
    "metadata": {
      "channel_id": "whatsapp",
      "phone_number_id": "unknown",
      "universal": "true",
      "wa_message_id": "whatsapp-adaptivecard_edge_cases-id"
    },
    "session_id": "whatsapp",
    "tenant": {
      "attempt": 0,
      "env": "default",
      "tenant": "default",
      "tenant_id": "default"
    },
    "text": "Long text with markdown **bold** and newlines\nsecond line"
  },
  "ok": true
}
